feat: basic authentication with JWT tokens

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,6 @@
 # Fill in the blanks and rename the file to .env
-DATABASE_HOST=<ADD YOUR ADDRESS HERE>
+DATABASE_HOST=<ADD YOUR ADDRESS HERE> 
 DATABASE_USERNAME=<ADD YOUR USERNAME HERE>
 DATABASE_NAME=<ADD YOUR DATABASE HERE>
 DATABASE_PASSWORD=<ADD YOUR PASSWORD HERE>
+JWT_SECRET=<ADD YOUR JWT SECRET HERE>
