rewrite: struct models, add tests

--- a/.env_example
+++ b/.env_example
@@ -4,3 +4,4 @@ DATABASE_USERNAME=<ADD YOUR USERNAME HERE>
 DATABASE_NAME=<ADD YOUR DATABASE HERE>
 DATABASE_PASSWORD=<ADD YOUR PASSWORD HERE>
 JWT_SECRET=<ADD YOUR JWT SECRET HERE>
+REDIS_PORT=<OPTIONAL>
