revert: don't store model metadata in database
There are benefits and downsides to using Postgres as model metadata
storage.

Benefits:
- Consistent with rest of the code
- Can make use of SQL for filtering models.

Downsides:
- Potential data mismatch. It's impossible to guarantee that the
  database will always have up to date information on the state of the
  data folder.
- Multiple reads and writes per IO.

For now, the decision is to not store metadata in the database, however
this can change given sufficiently good arguments.

--- a/.env_example
+++ b/.env_example
@@ -5,3 +5,4 @@ DATABASE_NAME=<ADD YOUR DATABASE HERE>
 DATABASE_PASSWORD=<ADD YOUR PASSWORD HERE>
 JWT_SECRET=<ADD YOUR JWT SECRET HERE>
 REDIS_PORT=<OPTIONAL>
+DATA_DIR=<PATH>
